added delete task method
